Fix scaling of svgz images.

Force scaling of svgz images to source size as is done for svg.  This
also removes a work around for QTBUG-9053 which has now been resolved.

Task-number: QTBUG-9053
Change-Id: I3aa898f74960ceb2e515bdb3aa44aa5a1a7a64d2
Reviewed-by: Yann Bodson <yann.bodson@nokia.com>